<resources>
    <string name="app_name">PRISMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="studies">Studies</string>
    <string name="profile">Profile</string>
    <string name="sites">Sites</string>
    <string name="sms">SMS</string>
    <string name="allocation">Allocation</string>


    <string name="generic_server_down">Cannot Reach Server Using Device</string>
    <string name="connection">Please check your internet connection.</string>
    <string name="generic_error">Connection Not Established,Resend Request</string>
    <string name="error_400">Connection Not Established Error 400</string>
    <string name="error_401">Unauthorized Access</string>
    <string name="error_402">Payment Required</string>
    <string name="error_403">Forbidden Access</string>
    <string name="error_404">Resource not Found</string>
    <string name="error_405">Method Not Allowed</string>
    <string name="error_406">Connection Not Established Error 406</string>
    <string name="error_407">Proxy Authentication Required</string>
    <string name="error_408">TimeOut Error, Resend Request</string>
    <string name="error_409">Conflict in connection</string>
    <string name="error_410">Connection Not Established Error 410</string>
    <string name="error_411">Connection Not Established Error 411</string>
    <string name="error_412">Connection Not Established Error 412</string>
    <string name="error_413">Connection Not Established Error 413</string>
    <string name="error_414">Connection Not Established Error 414</string>
    <string name="error_415">Unsupported Media Type</string>
    <string name="error_416">Requested Range Not Satisfiable</string>
    <string name="error_417">Expectation Failed</string>
    <string name="error_422">Unprocessable Entity</string>
    <string name="error_500">Server Error</string>
    <string name="error_501">Connection Not Established Error 501</string>
    <string name="error_502">Bad Gateway</string>
    <string name="error_503">Service Unavailable</string>
    <string name="error_504">Gateway Timeout</string>
    <string name="error_505">HTTP Version Not Supported</string>
    <string name="enter_your_email_and_password_to_continue">Enter your email and password to continue</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_pin">Forgot your password?</string>
    <string name="hey_there_nice_to_see_you_again">Hey there! Nice to see you again!</string>
    <string name="processing">Processing...</string>
    <string name="allocation_rates">Randomization Rates</string>
    <string name="my_actions">My Actions</string>
    <string name="home_desc">Welcome to PRISMS (pilot implementation of Short Message Service for randomization)</string>
    <string name="you_do_not_have_any_studies_assigned_to_you_yet">You do not have any studies assigned to you yet</string>
    <string name="your_studies_will_appear_here">Your studies will appear here</string>
    <string name="your_studies_will_appear_here_click_on_any_to_view_the_details_and_perform_randomizations">Your studies will appear here. Click on any to view the details and perform randomizations</string>
    <string name="logout">Logout</string>
    <string name="you_can_monitor_messaging_and_sms_randomization_from_this_page">You can monitor messaging and SMS randomization from this page</string>
    <string name="manage_available_sites_from_this_page_you_can_create_update_and_delete_sites_from_here">Manage available sites from this page, you can create, update and delete sites from here</string>
    <string name="create_site">create site</string>
    <string name="available_sites">Available sites</string>
    <string name="you_can_create_edit_and_delete_studies_from_this_page">You can create, edit and delete studies from this page</string>
    <string name="create_study">create study</string>
    <string name="available_studies">Available studies</string>
    <string name="study_name">Study name</string>
    <string name="create_a_new_study">Create a new study</string>
    <string name="create_a_new_site">Create a new site</string>
    <string name="site_name">Site name</string>
    <string name="upload_allocation_list">Upload allocation list</string>
    <string name="select_site">Select Site</string>
    <string name="select_study">Select Study</string>
    <string name="select_stratum">select stratum</string>
    <string name="select_file_to_upload">select file to upload</string>
    <string name="upload_list">upload list</string>
    <string name="upload_allocation_lists_to_site_specific_studies_here">Upload allocation lists to site specific studies here</string>
    <string name="allocation_lists">Allocation lists</string>
    <string name="strata">Strata</string>
    <string name="available_strata">Available strata</string>
    <string name="create_stratum">Create stratum</string>
    <string name="create_and_manage_strata_from_this_page">Create and manage strata from this page</string>
    <string name="create_new_stratum">Create new stratum</string>
    <string name="stratum">Stratum</string>
    <string name="study_detail">Study detail</string>
    <string name="you_do_not_have_any_incoming_sms_messages">You do not have any incoming SMS messages</string>
    <string name="randomise">Randomise</string>
    <string name="randomise_an_allocation">Randomise an allocation</string>
    <string name="ip_number">IP Number</string>
    <string name="prisms_app">PRISMS APP</string>
    <string name="version">Version</string>
    <string name="about_prisms">PRISMS is a comparative pilot study of an SMS-based randomization
platform versus sealed opaque envelopes.</string>
    <string name="term_of_services">Term of services</string>
    <string name="kemri_wellcome_trust_research_programme_nairobi_kenya">Dennis Muoki, KEMRI Wellcome Trust Research Programme</string>
    <string name="take_a_survey">Take a survey</string>
    <string name="post_study_survey">Post study survey</string>
    <string name="please_take_a_quick_post_study_survey_and_share_your_feedback">Please take a quick post study survey and share your feedback</string>
    <string name="this_survey_is_complete_thank_you_for_your_participation">This survey is complete. Thank you for your participation</string>
    <string name="answer">Answer</string>
    <string name="specify_other">Specify other</string>
    <string name="submit">Submit</string>


</resources>