<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_studies"
            android:icon="@drawable/ic_study"
            android:title="@string/studies" />
        <item
            android:id="@+id/nav_allocation"
            android:icon="@drawable/ic_allocation"
            android:title="@string/allocation" />

        <item
            android:id="@+id/nav_sms"
            android:icon="@drawable/ic_sms"
            android:title="@string/sms" />

        <item
            android:id="@+id/nav_sites"
            android:icon="@drawable/ic_site"
            android:title="@string/sites" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>
</menu>