<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_large"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_allocation_colored"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin" />

                    <LinearLayout
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/allocation_lists"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/blue_grey_900"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/upload_allocation_lists_to_site_specific_studies_here"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />


                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_allocation_list"
                    android:layout_gravity="end"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey_80" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_site"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:tint="@color/grey_60" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="match_parent" />

                <Spinner
                    android:id="@+id/siteSpinner"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_study"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:tint="@color/grey_60" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="match_parent" />

                <Spinner
                    android:id="@+id/studySpinner"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_stratum"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:tint="@color/grey_60" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="match_parent" />

                <Spinner
                    android:id="@+id/stratumSpinner"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialButton.OutlinedButton.IconOnly"
                android:text="@string/select_file_to_upload"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_list"
                android:textAllCaps="true"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@android:color/white"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:layout_gravity="end" />







        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>
